<resources>
    <string name="app_name">Skolarrs</string>
    <string name="follow_up">FOLLOW UP</string>
    <string name="follow_up_smallercase">Follow Up</string>
    <string name="dashBoard">DASHBOARD</string>
    <string name="lead">LEAD</string>
    <string name="admission_closed">Admission closed</string>
    <string name="permission">PERMISSION</string>
    <string name="leave">LEAVE</string>
    <string name="logout">LOGOUT</string>
    <string name="interest">INTEREST</string>
    <string name="switchOff">SWITCHOFF</string>
    <string name="out_of_coverage">Out of coverage</string>
    <string name="did_not_pick">Did not pick</string>
    <string name="busy_on_another_call">Busy on other call</string>
    <string name="apply">APPLY</string>
    <string name="Apply">Apply</string>
    <string name="view_calender">VIEW CALENDER</string>
    <string name="calender_view">CALENDER VIEW</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="menu">MENU</string>
    <string name="interested">Interested</string>
    <string name="hot">Hot</string>
    <string name="warm">Warm</string>
    <string name="cold">Cold</string>
    <string name="not_interested">Not Interested</string>
    <string name="disconnect_the_call">User disconnect the call</string>
    <string name="enter_a_valid_mobile_number">Enter a valid mobile number</string>
    <string name="switchoff">Switch Off</string>
    <string name="errorMsg">Something went wrong</string>
    <string name="invalid_number">Invalid Number</string>
    <string name="isEmpty_errorMsg">Please fill the valid details</string>
    <string name="enter_the_valid_email">Enter the valid Email</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="password_must_contains">Password must contains 8 characters</string>
    <string name="enter_digit_mobile_number">Enter 10 digit mobile number</string>
    <string name="loading">Loading</string>
    <string name="Please_turn_on_your_internet_connection">Please_turn_on_your_internet_connection</string>
    <string name="hey_hi_there">Hey Hi There!</string>
    <string name="let_the_happiness_begin">Let the Happiness Begin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>
    <string name="contact_permission_granted">Contact permission granted</string>
    <string name="contact_permission_denied">Contact permission denied</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_history">Connect History</string>
    <string name="view">View</string>
    <string name="was_call_connected">Was call connected?</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="customer_say_not_interest">Customer say not interest</string>
    <string name="user_disconnect_the_call">User disconnect the call</string>
    <string name="lead_connected">Lead Connected</string>
    <string name="lead_not_connected">Lead Not Connected</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_custom_date">Select custom date</string>
    <string name="default_notification_channel_id">com.tt.skolarrs</string>
    <string name="status">Status: </string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="please_turn_on_your_internet_connection">\"Please turn on your internet connection \"</string>
    <string name="no_data_found">No Data Found</string>
    <string name="select_followUpType">Select FollowUp type</string>
    <string name="sorry_this_feature_is_not_supported_yet">Sorry, this feature is not supported yet</string>
    <string name="select_from_date">Select from date</string>
    <string name="select_to_date">Select to date</string>
    <string name="reason">Reason</string>
    <string name="message">Message</string>
    <string name="whatsapp_share_content">Warm greetings from Skolarrs solutions Pvt ltd.\n             We are educational guidance center providing services to hundreds of students every year since 2001.We are guiding students to get admissions in all private institutions around Tamilnadu, Banglore as well as in Abroad.\n\nOffice address\n1515, \n3rd Floor, \nThe Grand Hub, \nAvinashi road, \nOpp to Varatharaja Mill, \nPeelamedu, \nCoimbatore - 641 004\n\nFacebook: facebook.com/skolarrssolutionsprivatelimited/\nInsta: instagram.com/skolarrs_solutions/\nWebsite: skolarrssolutions.com/</string>
    <string name="title_activity_leave_list_fragment">LeaveListFragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="recently_applied_leaves">Recently Applied Leaves</string>
    <string name="recently_applied_permissions">Recently Applied Permissions</string>
    <string name="applied_date">Applied Date</string>
    <string name="Status">Status</string>
    <string name="time">Time</string>
    <string name="select_from_time">Select from time</string>
    <string name="select_to_time">Select to time</string>
    <string name="permission_apply">Permission Apply</string>
    <string name="leave_apply">Leave Apply</string>
    <string name="no_leave_data_found">No leave data found</string>
    <string name="no_permission_data_found">No permission data found</string>
    <string name="report">REPORT</string>
    <string name="no_report_found">Report not found</string>
    <string name="select_month_from_calender">Select month from calender</string>
    <string name="date">Date</string>
    <string name="holiday">Holiday</string>
    <string name="no_holidays_data_found">No holidays data found</string>
    <string name="notification_not_found">Notification not found</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_date_or_you_want_clear_the_data_means_click_on_close_icon">Please select date or you want clear the filter means click on close icon</string>
    <string name="please_select_fromTime">Please select from time</string>
    <string name="please_select_toTime">Please select to time</string>
    <string name="please_select_from_date">Please select from date</string>
    <string name="please_select_to_date">Please select to date</string>
    <string name="notification">Notification</string>
    <string name="other_notes">Other notes</string>
    <string name="lead_added">Lead Added</string>
    <string name="status1">Status:</string>
    <string name="message1">Message: </string>
    <string name="next_follow_up">Next Follow Up:</string>
    <string name="please_allow_contact_permission">Call log and contact access is denied, Please allow contact permission</string>
    <string name="completed">Completed</string>
    <string name="please_select_the_date">Please select the date</string>
    <string name="please_select_the_time">Please select the time</string>
    <string name="please_select_the_status">Please select the status</string>
    <string name="please_select_the_item">Please select the item</string>
    <string name="source_default">(Default)</string>
    <string name="source_mic">(Mic)</string>
    <string name="source_line">(Voice Line)</string>
    <string name="delete_off" translatable="false">off</string>
    <string name="delete_1day" translatable="false">1day</string>
    <string name="delete_1week" translatable="false">1week</string>
    <string name="delete_1month" translatable="false">1month</string>
    <string name="delete_3month" translatable="false">3month</string>
    <string name="delete_6month" translatable="false">6month</string>
    <string name="pref_storage_title">Storage Path</string>
    <string name="pref_rate_title">Sample Rate</string>
    <string name="pref_encoding_title">Encoding</string>
    <string name="pref_encoding_summary">Output file formats (.wav, .m4a, ...)</string>
    <string name="pref_mode_title">Mode</string>
    <string name="pref_mode_summary">Recording channels</string>
    <string name="pref_delete_title">Delete Recordings</string>
    <string name="pref_nameformat_title">Name Format</string>
    <string name="pref_calldialog_title">Recent Call Dialog</string>
    <string name="pref_calldialog_summary">Show rename / favorite dialog after call ended</string>
    <string name="pref_optimization_title">Disable Battery Optimization</string>
    <string name="pref_optimization_summary">Prevent app from being removed from memory</string>
    <string name="pref_theme_title">Application Theme</string>
    <string name="pref_theme_summary">Set application theme (dark / light)</string>
    <string name="pref_mixerpaths_title">System Mixer Incall Recording</string>
    <string name="pref_mixerpaths_summary">Allow system mixer to record calls for regular apps</string>
    <string name="pref_recordings">Recordings</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_application">Application</string>
    <string name="menu_search">Search</string>
    <string name="send_survey">Send Survey</string>
    <string name="survey_know_issues">Know Issues:</string>
    <string name="survey_none">No survey\'s</string>
    <string name="survey_bad">Not working</string>
    <string name="survey_good">Working</string>
    <string name="survey_few_issues">Few issues</string>
    <string name="survey_view">View Survey\'s</string>
    <string name="survey_status">Status:</string>
    <string name="sort_by_contact_z_a">Contact Z-A</string>
    <string name="sort_by_contact_a_z">Contact A-Z</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string-array name="format_text">
        <item>2017-02-01 09.08.01.wav</item>
        <item>20170201T090801.wav</item>
        <item>1512340435 [Phone].wav</item>
        <item>2017-02-01 09.08.01 ↓↑ [Caller ID].wav</item>
    </string-array>
    <string-array name="format_values" formatted="false" translatable="false">
        <item>%s</item>
        <item>%I</item>
        <item>%T %p</item>
        <item>%s %i %c</item>
    </string-array>
    <string-array name="delete_text">
        <item>Keep all recording</item>
        <item>older than day</item>
        <item>older than week</item>
        <item>older than 1 month</item>
        <item>older than 3 months</item>
        <item>older than 6 months</item>
    </string-array>
    <string-array name="delete_values" translatable="false">
        <item>@string/delete_off</item>
        <item>@string/delete_1day</item>
        <item>@string/delete_1week</item>
        <item>@string/delete_1month</item>
        <item>@string/delete_3month</item>
        <item>@string/delete_6month</item>
    </string-array>
    <string-array name="source_text">
        <item>Auto (default)</item>
        <item>Voice Line</item>
        <item>Mic</item>
        <item>System Default</item>
        <item>VoIP</item>
        <item>Voice Recognition</item>
        <item>Camcorder</item>
        <item>System RAW</item>
    </string-array>
</resources>