<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LeaveApplyActivity">

    <include layout="@layout/toolbar_back"
        android:id="@+id/include" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:padding="20dp"
            android:fontFamily="@font/roboto"
            android:layout_marginVertical="20dp"
            android:textColor="@color/black"
            android:hint="@string/select_date"/>

        <TextView
            android:id="@+id/fromTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:padding="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:hint="@string/select_from_time"/>

        <TextView
            android:id="@+id/toTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:padding="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:hint="@string/select_to_time"/>

        <EditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:padding="15dp"
            android:singleLine="true"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:hint="@string/reason"/>

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/edittext_border"
            android:padding="20dp"
            android:maxLines="5"
            android:gravity="start|top"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:hint="@string/message"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/submit"
            android:layout_margin="50dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="15dp"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="1dp" />

    </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</RelativeLayout>