<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tt.skolarrs.view.activity.LeadConnectedActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/leadResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                style="@style/SpinnerTextStyle"
                android:background="@drawable/spinner_background"
                android:entries="@array/leadResponse"
                android:padding="15dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/interestedGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:padding="10dp"
                    android:background="@drawable/card_background"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/intrestedRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/warm" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/hot" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/cold" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/completed" />


                    </RadioGroup>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/notInterestedGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:padding="10dp"
                    android:background="@drawable/card_background"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/notIntrestedRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/customer_say_not_interest" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/user_disconnect_the_call" />
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/invalid_number" />


                    </RadioGroup>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:fontFamily="@font/roboto_medium"
                android:gravity="start|end"
                android:hint="@string/other_notes"
                android:padding="10dp"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/submit"
                android:layout_margin="50dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                app:cornerRadius="15dp"
                app:strokeColor="@color/primary_color"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>